In Bulgarian Locale DateFormat is wrong

XMLWordPrintable

    • b19
    • x86
    • linux
    • Verified

      FULL PRODUCT VERSION :


      A DESCRIPTION OF THE PROBLEM :
      The date time patterns for Bulgarian locale should be (or they can be the same as Russian):
      "DateTimePatterns",
                      new String[] {
                          "HH:mm:ss z", // full time pattern
                          "HH:mm:ss z", // long time pattern
                          "H:mm:ss", // medium time pattern
                          "H:mm", // short time pattern
                          "d MMMM yyyy EEEE", // full date pattern
                          "d MMMM yyyy EEEE", // long date pattern
                          "d.MM.yyyy", // medium date pattern
                          "d.MM.yy", // short date pattern
                          "{1} {0}" // date-time pattern
                      }


      REPRODUCIBILITY :
      This bug can be reproduced always.

            Assignee:
            Yong Huang (Inactive)
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: