7003124: In Bulgarian Locale DateFormat is wrong Reviewed-by: naoto, peytoia